# gh-external-audit

./: README.md  audit.py  fetch-workflow-uses-search.sh  main.py  pyproject.toml
.claude/skills/gh-external-audit/: SKILL.md
.claude/skills/gh-external-audit-org/: SKILL.md
docs/: agent-skill-org.md  agent-skill.md  update-command-design.md
src/gh_external_audit/: actions.py  checks.py  cli.py  clone.py  editor.py  git_ops.py  models.py  prompts.py  releases.py  scan.py  update.py
src/github_actions_scan/: actions.py  checks.py  cli.py  editor.py  git_ops.py  github.py  models.py  prompts.py  releases.py  report.py  scan.py  update.py
v2/: scan.sh
