[project]
name = "gh-external-audit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "rich>=13.0.0",
    "tqdm>=4.67.3",
    "typer>=0.25.1",
]

[project.scripts]
gh-external-audit = "gh_external_audit.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_external_audit"]
